[metadata]
name = MLExtreme
version = 0.1.2
author = Anne Sabourin
description = Machine Learning toolkit for Extreme Value Analysis of Heavy Tailed Data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
license_file =
    LICENSE

[options]
packages = find:
python_requires = >=3.7
